Fixed video not loading on mobile

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -373,6 +373,7 @@ button,
 	display: flex;
 	align-items: center; /* vertical centering */
 	justify-content: center; /* optional horizontal centering */
+	z-index: 0;
 }
 .hero-bg {
 	position: absolute;
@@ -381,7 +382,7 @@ button,
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
-	z-index: -1;
+	z-index: 0;
 	filter: grayscale(100%);
 	opacity: 0.9;
 }
@@ -390,7 +391,7 @@ button,
 	content: '';
 	position: absolute;
 	inset: 0;
-	z-index: 0;
+	z-index: 1;
 	pointer-events: none;
 	background: linear-gradient(
 		to top,
@@ -403,7 +404,7 @@ button,
 }
 .hero-content {
 	position: relative;
-	z-index: 1;
+	z-index: 2;
 	width: 100%;
 }
 .hero ul {
